kubernetes/main/apps/home-automation/home-assistant/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: home-assistant
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: home-assistant
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: node-red
            k8s:io.kubernetes.pod.namespace: selfhosted
        - matchLabels:
            app.kubernetes.io/name: zwave-js-ui
  egress:
    # database
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: pgo-${APP}
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP

    # mosquitto
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: mosquitto
      toPorts:
        - ports:
            - port: "1883"
              protocol: TCP

    # zwave-js-ui
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: zwave-js-ui
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
